<resources>
    <string name="app_name">QuizApp2</string>
    <string name="user_text">User</string>
    <string name="userL_text">Users</string>
    <string name="ok_text">Ok</string>
    <string name="add_text">Add</string>
    <string name="play_text">Play</string>
    <string name="setting_text">Settings</string>
    <string name="save_text">Save</string>
    <string name="moreInfo_text">More Info</string>
    <string name="order_text">Order by:</string>
    <string name="userinfo_text">Select user:</string>
    <string name="hname_text">Name</string>
    <string name="hdate_text">Date</string>
    <string name="hscore_text">Score</string>
    <string name="hhints_text">Hints</string>
    <string name="cancel_text">Cancel</string>
    <string name="options_text">Options</string>
    <string name="scores_text">Scores</string>
    <string name="categories_text">Categories:</string>
    <string name="all_text">All categories</string>
    <string name="art_text">Art</string>
    <string name="literature_text">Literature</string>
    <string name="history_text">History</string>
    <string name="geography_text">Geography</string>
    <string name="movies_text">Movies</string>
    <string name="science_text">Science</string>
    <string name="qnumber_text">No. of questions:</string>
    <string name="hnumber_text">No. of hints:</string>
    <string name="levels_text">Questions level:</string>
    <string name="easy_text">Easy</string>
    <string name="medium_text">Medium</string>
    <string name="hard_text">Hard</string>
    <string name="hints_text">Hints</string>
    <string name="question_text">Questions</string>
    <string name="use_text">Use Hint</string>
    <string name="prev_text">Prev</string>
    <string name="next_text">Next</string>
    <string name="question_text_G1">The great Gobi desert is located in:</string>
    <string name="Canswer_text_G1">Asia</string>
    <string name="I1answer_text_G1">Central America</string>
    <string name="I2answer_text_G1">Africa</string>
    <string name="I3answer_text_G1">South America</string>
    <string name="question_text_G2">In which country are the ruins of Sparta located?</string>
    <string name="Canswer_text_G2">Greece</string>
    <string name="I1answer_text_G2">Italy</string>
    <string name="I2answer_text_G2">Spain</string>
    <string name="I3answer_text_G2">United Kingdom</string>
    <string name="question_text_G3">Which of these countries do not have access to the Mediterranean Sea?</string>
    <string name="Canswer_text_G3">Serbia</string>
    <string name="I1answer_text_G3">Slovenia</string>
    <string name="I2answer_text_G3">Spain</string>
    <string name="I3answer_text_G3">Egypt</string>
    <string name="question_text_G4">What is the longest river in the world?</string>
    <string name="Canswer_text_G4">Amazon</string>
    <string name="I1answer_text_G4">Nile</string>
    <string name="I2answer_text_G4">Yellow River</string>
    <string name="I3answer_text_G4">Yangtze</string>
    <string name="question_text_G5">How many oceans are there on earth? </string>
    <string name="Canswer_text_G5">5</string>
    <string name="I1answer_text_G5">6</string>
    <string name="I2answer_text_G5">11</string>
    <string name="I3answer_text_G5">7</string>
    <string name="question_text_H1">In which war did Joan of Arc participate?</string>
    <string name="Canswer_text_H1">The 100 Years War</string>
    <string name="I1answer_text_H1">First Crusade</string>
    <string name="I2answer_text_H1">Napoleonic Wars</string>
    <string name="I3answer_text_H1">The Thirty Years’ War</string>
    <string name="question_text_H2">What was the capital of the Inca Empire? </string>
    <string name="Canswer_text_H2">Cuzco</string>
    <string name="I1answer_text_H2">Quito</string>
    <string name="I2answer_text_H2">Machu Picchu</string>
    <string name="I3answer_text_H2">Lima</string>
    <string name="question_text_H3">What was the name of the first president of the United States?</string>
    <string name="Canswer_text_H3">George Washington</string>
    <string name="I1answer_text_H3">John Adams</string>
    <string name="I2answer_text_H3">Abraham Lincoln</string>
    <string name="I3answer_text_H3">Thomas Jefferson</string>
    <string name="question_text_H4">Which Pharaoh was Nefertiti’s husband?</string>
    <string name="Canswer_text_H4">Akhenaton</string>
    <string name="I1answer_text_H4">Ramses II</string>
    <string name="I2answer_text_H4">Ramses I</string>
    <string name="I3answer_text_H4">Tutankhamun</string>
    <string name="question_text_H5">Who was the first Roman Emperor?</string>
    <string name="Canswer_text_H5">Caesar Augustus</string>
    <string name="I1answer_text_H5">Julius Caesar</string>
    <string name="I2answer_text_H5">Nero</string>
    <string name="I3answer_text_H5">Caligula</string>
    <string name="question_text_A1">Which museum is the Mona Lisa in?</string>
    <string name="Canswer_text_A1">Louvre Museum</string>
    <string name="I1answer_text_A1">Prado Museum</string>
    <string name="I2answer_text_A1">British Museum</string>
    <string name="I3answer_text_A1">Uffizi Gallery</string>
    <string name="question_text_A2">In what century was Van Gogh born?</string>
    <string name="Canswer_text_A2">19th Century</string>
    <string name="I1answer_text_A2">20th Century</string>
    <string name="I2answer_text_A2">18th Century</string>
    <string name="I3answer_text_A2">17th Century</string>
    <string name="question_text_A3">‘The Piety’ is a sculpture of:</string>
    <string name="Canswer_text_A3">Michelangelo</string>
    <string name="I1answer_text_A3">Bernini</string>
    <string name="I2answer_text_A3">Donatello</string>
    <string name="I3answer_text_A3">Rafael</string>
    <string name="question_text_A4">What is the name given to the architectural style of the Arabic constructions in the peninsula?</string>
    <string name="Canswer_text_A4">Mozarabic</string>
    <string name="I1answer_text_A4">Arabesque</string>
    <string name="I2answer_text_A4">Nazarite</string>
    <string name="I3answer_text_A4">Arabic</string>
    <string name="question_text_A5">When was Goya born? </string>
    <string name="Canswer_text_A5">1746</string>
    <string name="I1answer_text_A5">1706</string>
    <string name="I2answer_text_A5">1796</string>
    <string name="I3answer_text_A5">1806</string>
    <string name="question_text_M1">Who directed the original Star Wars trilogy?</string>
    <string name="Canswer_text_M1">George Lucas</string>
    <string name="I1answer_text_M1">Steven Spielberg</string>
    <string name="I2answer_text_M1">Tim Burton</string>
    <string name="I3answer_text_M1">Quentin Tarantino</string>
    <string name="question_text_M2">How many movies are there in the Harry Potter series?</string>
    <string name="Canswer_text_M2">8</string>
    <string name="I1answer_text_M2">5</string>
    <string name="I2answer_text_M2">6</string>
    <string name="I3answer_text_M2">7</string>
    <string name="question_text_M3">Who directed Jurassic Park (1993)?</string>
    <string name="Canswer_text_M3">Steven Spielberg</string>
    <string name="I1answer_text_M3">Clint Eastwood</string>
    <string name="I2answer_text_M3">Guillermo del Toro</string>
    <string name="I3answer_text_M3">James Cameron</string>
    <string name="question_text_M4">Which movie gave Leonardo DiCaprio his first Oscar?</string>
    <string name="Canswer_text_M4">The Revenant</string>
    <string name="I1answer_text_M4">The Wolf of Wall Street</string>
    <string name="I2answer_text_M4">Inception</string>
    <string name="I3answer_text_M4">Once Upon a Time in Hollywood</string>
    <string name="question_text_M5">In which animated movie an ogre befriends a donkey?</string>
    <string name="Canswer_text_M5">Shrek</string>
    <string name="I1answer_text_M5">Coco</string>
    <string name="I2answer_text_M5">Wallace and Gromit</string>
    <string name="I3answer_text_M5">Finding Nemo</string>
    <string name="question_text_L1">Who wrote ‘The Iliad’? </string>
    <string name="Canswer_text_L1">Homero</string>
    <string name="I1answer_text_L1">Marco Tulio Cicerón</string>
    <string name="I2answer_text_L1">Séneca</string>
    <string name="I3answer_text_L1">Heródoto</string>
    <string name="question_text_L2">Who is the author of ‘The Divine Comedy’</string>
    <string name="Canswer_text_L2">Dante Alighieri</string>
    <string name="I1answer_text_L2">Petrarca</string>
    <string name="I2answer_text_L2">Giovanni Boccacio</string>
    <string name="I3answer_text_L2">Maquiavelo</string>
    <string name="question_text_L3">Why did the Little Prince decide to leave his planet?</string>
    <string name="Canswer_text_L3">He felt a rose was taking advantage of him</string>
    <string name="I1answer_text_L3">He wanted to know the Earth</string>
    <string name="I2answer_text_L3">He was sick</string>
    <string name="I3answer_text_L3">The King orders him to</string>
    <string name="question_text_L4">Which of these spanish writers doesn’t have the Nobel Prize?</string>
    <string name="Canswer_text_L4">Miguel Delibes</string>
    <string name="I1answer_text_L4">José Echegaray</string>
    <string name="I2answer_text_L4">Vicente Aleixandre</string>
    <string name="I3answer_text_L4">Camilo José Cela</string>
    <string name="question_text_L5">Who wrote ‘Frankenstein’?</string>
    <string name="Canswer_text_L5">Mary Shelley</string>
    <string name="I1answer_text_L5">Adele Gerhard</string>
    <string name="I2answer_text_L5">Jane Austin</string>
    <string name="I3answer_text_L5">Rosalie Loveling</string>
    <string name="question_text_S1">What is the minimum component that makes up living beings? </string>
    <string name="Canswer_text_S1">Cell</string>
    <string name="I1answer_text_S1">Fabric</string>
    <string name="I2answer_text_S1">Particle</string>
    <string name="I3answer_text_S1">Atom</string>
    <string name="question_text_S2">The genetic information in the cells is located:</string>
    <string name="Canswer_text_S2">In the nucleus</string>
    <string name="I1answer_text_S2">On the membrane</string>
    <string name="I2answer_text_S2">In the cytoplasm</string>
    <string name="I3answer_text_S2">In the protoplasm</string>
    <string name="question_text_S3">What do whales breathe with?</string>
    <string name="Canswer_text_S3">Lungs</string>
    <string name="I1answer_text_S3">Gills</string>
    <string name="I2answer_text_S3">Cells</string>
    <string name="I3answer_text_S3">Through their skin</string>
    <string name="question_text_S4">The chromosomes are formed by:</string>
    <string name="Canswer_text_S4">DNA</string>
    <string name="I1answer_text_S4">RNA</string>
    <string name="I2answer_text_S4">Proteins</string>
    <string name="I3answer_text_S4">Carbohydrates</string>
    <string name="question_text_S5">The physical force that the earth exerts on bodies toward its center is the:</string>
    <string name="Canswer_text_S5">Gravity</string>
    <string name="I1answer_text_S5">Normality</string>
    <string name="I2answer_text_S5">Centrifugal Force</string>
    <string name="I3answer_text_S5">Centripetal Force</string>

</resources>