<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/full_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/header_bg">

    <TextView
        android:id="@+id/hname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="20sp"
        tools:text="@string/hname_text"
        android:textColor="#FFFF"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3" />

    <TextView
        android:id="@+id/hdate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:text="@string/hdate_text"
        android:textColor="#FFFF"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3" />

    <TextView
        android:id="@+id/hscore_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFF"
        tools:text="@string/hscore_text" />
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3" />

    <TextView
        android:id="@+id/hhints_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="20sp"
        android:textSize="22sp"
        android:textColor="#FFFF"
        tools:text="@string/hhints_text" />
</LinearLayout>