<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/userL_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="500dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_text"
            android:textColor="#2f4950"
            android:background="#8ADDAE"
            android:layout_marginEnd="10dp"
            />
        <Button
            android:id="@+id/cn_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_text"
            android:textColor="#2f4950"
            android:background="#8ADDAE"
            />

    </LinearLayout>

</LinearLayout>