<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/logoquizapp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="#8ADDAE"
            android:padding="10dp"
            android:text="@string/play_text"
            android:textColor="#2f4950"
            android:textSize="25dp" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#8ADDAE"
            android:padding="10dp"
            android:text="@string/options_text"
            android:textColor="#2f4950"
            android:textSize="25dp" />
    </LinearLayout>

    <Button
        android:id="@+id/user_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#8ADDAE"
        android:padding="10dp"
        android:text="@string/user_text"
        android:textColor="#2f4950"
        android:textSize="25dp" />
</LinearLayout>