<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scores">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/header_bg"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_marginTop="5dp"
            android:text="Scores"
            style="bold"
            android:textSize="25dp"
            android:textColor="#FFFF"
            android:layout_gravity="center"/>
        <LinearLayout
            android:id="@+id/moreInfo_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_text"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"/>
            <Spinner
                android:id="@+id/order_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_text"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"/>
            <Spinner
                android:id="@+id/userselect_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/full_data_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hname_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/hname_text"
                android:textColor="#FFFF"
                android:textSize="22sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <TextView
                android:id="@+id/hdate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/hdate_text"
                android:textColor="#FFFF"
                android:textSize="22sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <TextView
                android:id="@+id/hscore_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/hscore_text"
                android:textColor="#FFFF"
                android:textSize="22sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <TextView
                android:id="@+id/hhints_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/hhints_text"
                android:textColor="#FFFF"
                android:textSize="22sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scores_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
